--- a/BlazorApp2/Client/Pages/Settings.razor
+++ b/BlazorApp2/Client/Pages/Settings.razor
@@ -5,12 +5,35 @@
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 
 @page "/settings"
-<h3>Settings</h3>
-    <input />
+  
+        <div class="container-fluid">
+            <h3>Settings</h3>
+            <p>Please save your key somewhere, since clearing your browser settings will kick you out of your account.</p>
+            <p>@Key</p>
+        </div>
+        <div class="container-fluid">
+            <div class="form-group">
+                <label for="keytextarea">Key:</label>
+                <textarea class="form-control" id="keytextarea" @bind="Key" rows="3"></textarea>
+                <small id="keyHelpBlock" class="form-text text-muted">
+                    In case you were wondering, it is case sensitive.
+                </small>
+            </div>
+            <button class="btn btn-primary" @onclick="UpdateKey">Change key</button>
+        </div>
+   
 
 
+    @code {
+        public string Key { get; set; }
+        protected override async Task OnInitializedAsync()
+        {
 
-@code {
-    public string Key { get; set; }
+            Key = await localStorage.GetItemAsync<string>("key");
+        }
+        protected async Task UpdateKey()
+        {
+            await localStorage.SetItemAsync("key", Key);
 
-}
+        }
+    }
