--- a/BlazorApp2/Client/Pages/EditRuggerPic.razor
+++ b/BlazorApp2/Client/Pages/EditRuggerPic.razor
@@ -9,7 +9,7 @@
 <h3>Edit Your Picture</h3>
 <img id="profilepic" src="@myInfo.MyImageURI" class="img-thumbnail float-right" />
 <div class="form-group">
-
+    <NavLink href="/upload-files">Upload a profile video</NavLink><br />
     <label for="selectpic">Select a Profile Picture</label>
     <InputFile class="form-control-file" id="selectpic" OnChange="@OnInputFileChange" />
 </div>
