--- a/BlazorApp2/Client/Pages/Users.razor
+++ b/BlazorApp2/Client/Pages/Users.razor
@@ -11,7 +11,15 @@
 {
 
     <div class="card" style="width: 18rem;">
-        <img src="@DefaultIfNone(p.ImageURI)" class="card-img-top" alt="...">
+        @if (p.VideoFile.Length > 1)
+        {
+            <video src="/videos/@p.VideoFile" class="card-img-top" type="video/webm" controls muted autoplay poster="@DefaultIfNone(p.ImageURI)"></video>
+        }
+        else
+        {
+            <img src="@DefaultIfNone(p.ImageURI)" class="card-img-top" alt="...">
+        }
+
         <div class="card-body">
             <h5 class="card-title">@p.Name</h5>
             <p class="card-text">@p.Bio</p>
