--- a/BlazorApp2/Client/Pages/UploadFiles.razor
+++ b/BlazorApp2/Client/Pages/UploadFiles.razor
@@ -5,6 +5,7 @@
 @inject HttpClient Http
 @inject ILogger<UploadFiles> logger
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
+@inject NavigationManager NavigationManager
 
 
 <h1>Upload Files</h1>
@@ -14,13 +15,14 @@
         Upload a profile video:
         <InputFile OnChange="@OnInputFileChange" />
     </label>
+    @Status
 </p>
 
 @if (files.Count > 0)
 {
     <div class="card">
         <div class="card-body">
-            <p>@status</p>
+            <p>@Status</p>
         </div>
     </div>
 }
@@ -30,12 +32,18 @@
     private IList<UploadResult> uploadResults = new List<UploadResult>();
     private int maxAllowedFiles = 1;
     private bool shouldRender;
-    public string @status
+    public string Status { get; set; } = "When you post the file, the upload will start, but the UI won't update. When the upload is done, you'll be redirecte"
+            +"back to the home page where you can see your video, if the upload was successful.";
 
     protected override bool ShouldRender() => shouldRender;
 
     private async Task OnInputFileChange(InputFileChangeEventArgs e)
     {
+        //TODO:https://stackoverflow.com/questions/65752190/upload-a-file-in-background-with-blazor-webassembly
+        Status = "Uploading video... this could take a while...";
+
+        this.StateHasChanged();
+        await Task.Delay(100);
         shouldRender = false;
         long maxFileSize = 1024 * 1024 * 15;
         var upload = false;
@@ -63,7 +71,7 @@
                     content.Add(
                     content: fileContent,
                     name: "\"files\"",
-                    fileName: key );
+                    fileName: key);
 
                     upload = true;
                 }
@@ -84,31 +92,21 @@
 
         if (upload)
         {
+
             var response = await Http.PostAsync("/Filesave", content);
 
             var newUploadResults = await response.Content
                 .ReadFromJsonAsync<IList<UploadResult>>();
 
             uploadResults = uploadResults.Concat(newUploadResults).ToList();
+            Status = "Upload Complete";
+            NavigationManager.NavigateTo("/");
         }
 
         shouldRender = true;
     }
 
-    private static bool FileUpload(IList<UploadResult> uploadResults,
-        string fileName, ILogger<UploadFiles> logger, out UploadResult result)
-    {
-        result = uploadResults.SingleOrDefault(f => f.FileName == fileName);
 
-        if (result is null)
-        {
-            logger.LogInformation("{FileName} not uploaded", fileName);
-            result = new UploadResult();
-            result.ErrorCode = 5;
-        }
-
-        return result.Uploaded;
-    }
 
     private class File
     {
