--- a/BlazorApp2/Client/Pages/Index.razor
+++ b/BlazorApp2/Client/Pages/Index.razor
@@ -118,7 +118,7 @@
     MyInfo myInfo = new MyInfo();
     bool debug = true;
     string format = "image/png";
-    public string UpdateAvailable { get; set; } = ""; // "d-none";
+    public string UpdateAvailable { get; set; } = "d-none"; // "d-none";
     public string Test1 { get; set; } = "";
     public string Key { get; set; } = "";
 
